<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ljl.jackie.httpreqdemo.NetworkActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUrlTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvUrlTip"
            android:textColor="@android:color/holo_green_dark" />
        <TextView
            android:id="@+id/tvUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvRequestHeaderTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRequestHeaderTip"
            android:textColor="@android:color/holo_orange_dark" />
        <TextView
            android:id="@+id/tvRequestHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvRequestBodyTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRequestBodyTip"
            android:textColor="@android:color/holo_blue_dark" />
        <TextView
            android:id="@+id/tvRequestBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvResponseHeaderTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvResponseHeadTip"
            android:textColor="@android:color/holo_purple" />
        <TextView
            android:id="@+id/tvResponseHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvResponseBodyTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvResponseBodyTip"
            android:textColor="?attr/colorPrimary" />
        <TextView
            android:id="@+id/tvResponseBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
